[tool.poetry]
name = "seocringe_bot"
version = "2.2.8.1488"
description = "GTFU"
authors = ["seocringe <privetnambogolet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.6"
aiogram = "^2.18"
aioschedule = "^0.5.2"
art = "^5.4"
beautifulsoup4 = "^4.10.0"
coloredlogs = "^15.0.1"
httpx = "^0.21.3"
lxml = "^4.7.1"
psutil = "^5.9.0"
pyduckgo = "^0.2.0"
pymemeru = "^0.2.0"
peewee = "^3.14.8"
pydantic = "^1.9.0"
emoji = "^1.6.1"
pytz = "^2021.3"
deep-translator = "=1.8.3"
distro = "^1.7.0"
humanize = "^4.1.0"
pendulum = "^2.1.2"
pytimeparse = "^1.1.8"
pytesseract = "^0.3.10"
pyi18n-new = "^1.1.0"
ffmpeg-python = "^0.2.0"
tghtml = "^1.1.0"
wikipya = "^4.0.3"
cached-property = "^1.5.2"
toml = "^0.10.2"
openai = "^0.27.8"
nltk = "^3.8.1"
whois = "^0.9.27"
python-whois = "^0.8.0"
lyricsgenius = "^3.0.1"
pyrogram = "^2.0.106"
opencv-python = "^4.8.1.78"
tgcrypto = "^1.2.5"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"
bandit = "^1.7.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"